# nirs4all-cockpit

./: .gitignore  AGENTS.md  LICENSING.md  LICENSING_FR.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  collect.yml  pages.yml  version-guard.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
cockpit/: __init__.py  admin.py  admin_collect.py  cli.py  http.py  manual_actions.py  model.py  reconcile.py  snapshot.py  version.py
cockpit/collect/: __init__.py  base.py  code_stats.py  cran.py  crates.py  github.py  github_prs.py  github_security.py  local_manifests.py  npm.py  pypi.py  readthedocs.py  runiverse.py  search_console.py  sentry.py  visits.py
data/: current.json  manual-actions.json
docs/: CODEX_ROADMAP_REVIEW.md
ops/: manual-actions.yaml  targets.yaml
scripts/: fetch-cran-tarballs.sh  smoke_dashboard_dom.py  winbuilder-check.sh
tests/: conftest.py  test_admin.py  test_admin_workflows.py  test_cli.py  test_collect_parsing.py  test_local_manifests.py  test_reconcile.py  test_search_console.py  test_stats.py  test_targets_topology.py  test_version.py
tests/fixtures/: cranlogs_zero.json  crates_formats_ok_200.json  npm_scoped_error_200.json  npm_scoped_ok_200.json  pypi_nirs4all.json  runiverse_ok_200.json  runiverse_version_null.json
web/: CNAME  app.js  icons.js  index.html  robots.txt  sitemap.xml  style.css
